Resolve slideshow not fitting entire screen

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -135,26 +135,9 @@ footer {
 ---------------------------------------------------
 The following code is modified and obtained from https://getbootstrap.com/examples/carousel/*/
 
-/* Carousel base class */
-.carousel {
-  height: 480px;
-  padding: 0;
-  margin: 0;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel .item {
-  height: 480px;
-  background-color: #777;
-}
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 480px;
+.carousel,.item,.active{
+   height:100%;
+ }
+.carousel-inner{
+    height:100%;
 }
